Fix alignment

--- a/src/components/Footer/styles.module.css
+++ b/src/components/Footer/styles.module.css
@@ -52,10 +52,10 @@
   .root {
     background-color: #fff;
     border-radius: 3px;
-    bottom: 13px;
+    bottom: 11px;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
     display: none;
-    left: 55px;
+    left: 50px;
     padding: 5px 15px;
     position: fixed;
   }
